crates/alder-can/src/snapshots/alder_can__pattern__tests__bool_pattern_with_args_is_bad_arity.snap
---
source: crates/alder-can/src/pattern.rs
description: True x
---
[
    BadArity {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 7,
            },
        },
        context: PatternArity,
        name: "True",
        expected: 0,
        actual: 1,
    },
]
