crates/alder-can/src/snapshots/alder_can__pattern__tests__ctor_no_args.snap
---
source: crates/alder-can/src/pattern.rs
description: Nothing
---
(
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 8,
            },
        },
        value: Constructor(
            PatternCtor {
                reference: ConstructorName {
                    home: ModuleName {
                        package: None,
                        name: "Maybe",
                    },
                    union: "Maybe",
                    name: "Nothing",
                },
                union: Union {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 0,
                            },
                        },
                        value: "Maybe",
                    },
                    parameters: [
                        "a",
                    ],
                    ctors: [
                        Ctor {
                            name: "Nothing",
                            index: 1,
                            arity: 0,
                            arguments: [],
                        },
                        Ctor {
                            name: "Just",
                            index: 0,
                            arity: 1,
                            arguments: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                    },
                                    value: Var(
                                        "a",
                                    ),
                                },
                            ],
                        },
                    ],
                    alternatives: 2,
                    options: Normal,
                },
                index: 1,
                arguments: [],
                options: Normal,
                alternatives: 2,
            },
        ),
    },
    {},
)
